[metadata]
name = ekizo-dl
version = 1.0.1
author = Michiel Sikma
author-email = michiel@sikma.org
home-page = https://github.com/msikma/ekizo-dl
description = A script that downloads auction images from Mandarake
license = MIT
platform = any
keywords = Mandarake, Ekizo
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.0

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.0.*
